# drchrono

./: .gitignore  .gitmodules  CMakeLists.txt  GROUPS_CONFIG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SUBMODULE_SETUP.md  addNewEvent.ui  chronometer.sqbpro  create_sample_xlsx.py  crono.pro  cronometerwindow.cpp  cronometerwindow.h  cronometerwindow.ui  dbmanager.cpp  dbmanager.h  deploy_qt_mingw.bat  excelutils.cpp  excelutils.h  groups.xlsx  loadparticipantswindow.cpp  loadparticipantswindow.h  main.cpp  neweventwindow.cpp  neweventwindow.h  neweventwindow.ui  participantswindow.cpp  participantswindow.h  qt.conf  report.cpp  report.h  settings.ini  trialcontroller.cpp  trialcontroller.h
aggregates/: eventaggregate.cpp  eventaggregate.h  trialaggregate.cpp  trialaggregate.h
model/: athlete.h  category.h  modality.h  registration.h  result.h  trialinfo.h
repository/athletes/: athletesrepository.cpp  athletesrepository.h
repository/categories/: categoriesrepository.cpp  categoriesrepository.h
repository/modalities/: modalitiesrepository.cpp  modalitiesrepository.h
repository/registrations/: registrationsrepository.cpp  registrationsrepository.h
repository/results/: resultsrepository.cpp  resultsrepository.h
repository/trials/: trialsrepository.cpp  trialsrepository.h
sample-data/: cronoDR4-2025.xlsx
utils/: excelutils.cpp  excelutils.h  timeutils.cpp  timeutils.h
